@@ -1,2 +1,5 @@
+Version 2010091501 Wed Sep 15 02:53:49 CEST 2010
++ Mention requirements in Makefile.PL
+
 Version 2010091101 Sat Sep 11 01:46:08 CEST 2010
 + First release
